[gd_scene load_steps=9 format=3 uid="uid://ddqin8fivbwp5"]

[ext_resource type="Script" uid="uid://bl2v6wd2bqkoj" path="res://menus/options/SettingsMenuController.gd" id="1_0hxq5"]
[ext_resource type="Theme" uid="uid://cdta86b2s4dni" path="res://assets/themes/global_theme.tres" id="1_wtyaf"]
[ext_resource type="Texture2D" uid="uid://deyqhxsmrfbmn" path="res://assets/ui/grid_background.png" id="3_jm0x2"]
[ext_resource type="Shader" uid="uid://dqf3tvysjbhu7" path="res://assets/shaders/blur.gdshader" id="3_wtyaf"]
[ext_resource type="ButtonGroup" path="res://menus/options/options_category_button_group.tres" id="5_kf2ok"]
[ext_resource type="Script" uid="uid://c524xm6mk25cc" path="res://common/UI/TabButton.gd" id="6_y60rv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jm0x2"]
shader = ExtResource("3_wtyaf")
shader_parameter/amount = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kf2ok"]

[node name="SettingsMenu" type="Control" node_paths=PackedStringArray("Tabs", "TabButtons", "GlobalVolSlider", "GlobalLabel", "MusicVolSlider", "MusicLabel", "EffectsVolSlider", "EffectsLabel", "AmbienceVolSlider", "AmbienceLabel", "ResolutionDropdown", "FullscreenToggle", "VSyncToggle", "TutorialToggle")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wtyaf")
script = ExtResource("1_0hxq5")
Tabs = NodePath("InnerControl/TabContainer")
TabButtons = NodePath("InnerControl/TabButtons")
GlobalVolSlider = NodePath("InnerControl/TabContainer/AudioSettings/Global/HBoxContainer/GlobalVolume")
GlobalLabel = NodePath("InnerControl/TabContainer/AudioSettings/Global/HBoxContainer/GlobalLabel")
MusicVolSlider = NodePath("InnerControl/TabContainer/AudioSettings/Music/HBoxContainer/MusicVolume")
MusicLabel = NodePath("InnerControl/TabContainer/AudioSettings/Music/HBoxContainer/MusicLabel")
EffectsVolSlider = NodePath("InnerControl/TabContainer/AudioSettings/Effects/HBoxContainer2/EffectsVolume")
EffectsLabel = NodePath("InnerControl/TabContainer/AudioSettings/Effects/HBoxContainer2/EffectsLabel")
AmbienceVolSlider = NodePath("InnerControl/TabContainer/AudioSettings/Ambience/HBoxContainer2/AmbienceVolume")
AmbienceLabel = NodePath("InnerControl/TabContainer/AudioSettings/Ambience/HBoxContainer2/AmbienceLabel")
ResolutionDropdown = NodePath("InnerControl/TabContainer/VideoSettings/Resolution/Resolution")
FullscreenToggle = NodePath("InnerControl/TabContainer/VideoSettings/Fullscreen/Fullscreen")
VSyncToggle = NodePath("InnerControl/TabContainer/VideoSettings/VSync/VSync")
TutorialToggle = NodePath("InnerControl/TabContainer/Graphics Settings/Tutorial/Tutorial")

[node name="BackgroundPlaceholder" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_jm0x2")
stretch_mode = 5

[node name="1440pReferenceRect" type="ReferenceRect" parent="."]
visible = false
custom_minimum_size = Vector2(1440, 1080)
layout_mode = 0
offset_left = 270.0
offset_right = 1710.0
offset_bottom = 1080.0
pivot_offset = Vector2(720, 540)
border_width = 2.0

[node name="InnerControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 90.0
offset_top = 24.0
offset_right = -90.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer2" type="PanelContainer" parent="InnerControl"]
material = SubResource("ShaderMaterial_jm0x2")
layout_mode = 0
offset_left = -89.0
offset_right = 151.0
offset_bottom = 53.0
theme_type_variation = &"HeadingPanel"

[node name="HeadingLabel" type="Label" parent="InnerControl/PanelContainer2"]
layout_mode = 2
theme = ExtResource("1_wtyaf")
theme_type_variation = &"HeadingLabel"
text = "Options"
uppercase = true

[node name="BackButton" type="Button" parent="InnerControl"]
custom_minimum_size = Vector2(145, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "SAVE + EXIT"

[node name="ResetButton" type="Button" parent="InnerControl"]
custom_minimum_size = Vector2(145, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 54.0
grow_vertical = 0
text = "RESET TO DEFAULT"

[node name="TabButtons" type="VBoxContainer" parent="InnerControl"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
theme_override_constants/separation = 36

[node name="AudioButton" type="Button" parent="InnerControl/TabButtons"]
layout_mode = 2
theme_type_variation = &"TabButtonSelected"
toggle_mode = true
button_pressed = true
button_group = ExtResource("5_kf2ok")
text = "AUDIO"
alignment = 0
script = ExtResource("6_y60rv")

[node name="VideoButton" type="Button" parent="InnerControl/TabButtons"]
layout_mode = 2
theme_type_variation = &"TabButtonNormal"
toggle_mode = true
button_group = ExtResource("5_kf2ok")
text = "VIDEO"
alignment = 0
script = ExtResource("6_y60rv")

[node name="GraphicsButton" type="Button" parent="InnerControl/TabButtons"]
layout_mode = 2
theme_type_variation = &"TabButtonNormal"
toggle_mode = true
button_group = ExtResource("5_kf2ok")
text = "GRAPHICS"
alignment = 0
script = ExtResource("6_y60rv")

[node name="TabContainer" type="TabContainer" parent="InnerControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -353.0
offset_top = -154.5
offset_right = 353.0
offset_bottom = 154.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_kf2ok")
current_tab = 0
tabs_visible = false

[node name="AudioSettings" type="VBoxContainer" parent="InnerControl/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 36
alignment = 1
metadata/_tab_index = 0

[node name="Global" type="VBoxContainer" parent="InnerControl/TabContainer/AudioSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="InnerControl/TabContainer/AudioSettings/Global"]
layout_mode = 2
size_flags_horizontal = 3
text = "Global Volume"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="InnerControl/TabContainer/AudioSettings/Global"]
layout_mode = 2

[node name="GlobalVolume" type="HSlider" parent="InnerControl/TabContainer/AudioSettings/Global/HBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.0
value = 0.78

[node name="GlobalLabel" type="Label" parent="InnerControl/TabContainer/AudioSettings/Global/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "78"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Music" type="VBoxContainer" parent="InnerControl/TabContainer/AudioSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="InnerControl/TabContainer/AudioSettings/Music"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="InnerControl/TabContainer/AudioSettings/Music"]
layout_mode = 2

[node name="MusicVolume" type="HSlider" parent="InnerControl/TabContainer/AudioSettings/Music/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.0
value = 0.78

[node name="MusicLabel" type="Label" parent="InnerControl/TabContainer/AudioSettings/Music/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "78"
horizontal_alignment = 2

[node name="Effects" type="VBoxContainer" parent="InnerControl/TabContainer/AudioSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="InnerControl/TabContainer/AudioSettings/Effects"]
layout_mode = 2
size_flags_horizontal = 3
text = "Effects Volume"
uppercase = true

[node name="HBoxContainer2" type="HBoxContainer" parent="InnerControl/TabContainer/AudioSettings/Effects"]
layout_mode = 2

[node name="EffectsVolume" type="HSlider" parent="InnerControl/TabContainer/AudioSettings/Effects/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.0
value = 0.78

[node name="EffectsLabel" type="Label" parent="InnerControl/TabContainer/AudioSettings/Effects/HBoxContainer2"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "78"
horizontal_alignment = 2

[node name="Ambience" type="VBoxContainer" parent="InnerControl/TabContainer/AudioSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="InnerControl/TabContainer/AudioSettings/Ambience"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ambience Volume"
uppercase = true

[node name="HBoxContainer2" type="HBoxContainer" parent="InnerControl/TabContainer/AudioSettings/Ambience"]
layout_mode = 2

[node name="AmbienceVolume" type="HSlider" parent="InnerControl/TabContainer/AudioSettings/Ambience/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.0
value = 0.78

[node name="AmbienceLabel" type="Label" parent="InnerControl/TabContainer/AudioSettings/Ambience/HBoxContainer2"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "78"
horizontal_alignment = 2

[node name="VideoSettings" type="VBoxContainer" parent="InnerControl/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 36
alignment = 1
metadata/_tab_index = 1

[node name="Resolution" type="HBoxContainer" parent="InnerControl/TabContainer/VideoSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="InnerControl/TabContainer/VideoSettings/Resolution"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resolution"
uppercase = true

[node name="Resolution" type="OptionButton" parent="InnerControl/TabContainer/VideoSettings/Resolution"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Fullscreen" type="HBoxContainer" parent="InnerControl/TabContainer/VideoSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="InnerControl/TabContainer/VideoSettings/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fullscreen"
uppercase = true

[node name="Fullscreen" type="CheckButton" parent="InnerControl/TabContainer/VideoSettings/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSync" type="HBoxContainer" parent="InnerControl/TabContainer/VideoSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="InnerControl/TabContainer/VideoSettings/VSync"]
layout_mode = 2
size_flags_horizontal = 3
text = "VSync"
uppercase = true

[node name="VSync" type="CheckButton" parent="InnerControl/TabContainer/VideoSettings/VSync"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Graphics Settings" type="VBoxContainer" parent="InnerControl/TabContainer"]
visible = false
layout_mode = 2
alignment = 1
metadata/_tab_index = 2

[node name="Tutorial" type="HBoxContainer" parent="InnerControl/TabContainer/Graphics Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="InnerControl/TabContainer/Graphics Settings/Tutorial"]
layout_mode = 2
size_flags_horizontal = 3
text = "Show Tutorial"
uppercase = true

[node name="Tutorial" type="CheckButton" parent="InnerControl/TabContainer/Graphics Settings/Tutorial"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true

[connection signal="pressed" from="InnerControl/BackButton" to="." method="on_back_clicked"]
[connection signal="pressed" from="InnerControl/ResetButton" to="." method="on_reset_clicked"]
[connection signal="value_changed" from="InnerControl/TabContainer/AudioSettings/Global/HBoxContainer/GlobalVolume" to="." method="on_global_vol_changed"]
[connection signal="value_changed" from="InnerControl/TabContainer/AudioSettings/Music/HBoxContainer/MusicVolume" to="." method="on_music_vol_changed"]
[connection signal="value_changed" from="InnerControl/TabContainer/AudioSettings/Effects/HBoxContainer2/EffectsVolume" to="." method="on_effects_vol_changed"]
[connection signal="value_changed" from="InnerControl/TabContainer/AudioSettings/Ambience/HBoxContainer2/AmbienceVolume" to="." method="on_ambience_vol_changed"]
[connection signal="item_selected" from="InnerControl/TabContainer/VideoSettings/Resolution/Resolution" to="." method="on_resolution_changed"]
[connection signal="toggled" from="InnerControl/TabContainer/VideoSettings/Fullscreen/Fullscreen" to="." method="on_full_screen_toggled"]
[connection signal="toggled" from="InnerControl/TabContainer/VideoSettings/VSync/VSync" to="." method="on_vsync_toggled"]
[connection signal="toggled" from="InnerControl/TabContainer/Graphics Settings/Tutorial/Tutorial" to="." method="on_tutorial_toggled"]
